--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,10 @@
 
 {% include header.html %}
 
-<main
-  class="bg-indigo-500 flex h-screen items-center justify-center w-full"
->
-  {{ content }}
+{% include nav.html %}
+
+<main>
+    {{ content }}
 </main>
 
 {% include footer.html %}
