--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en-US">
-  <head>
+<html lang="en-US">
+
+<head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Tailwind Jekyll Starter Kit</title>
+    <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css" />
-  </head>
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
+    <script src="https://kit.fontawesome.com/861df2df43.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+</head>
 
-  <body>
+<body>
+
 </html>
