--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,9 +2,7 @@
     <div
         class="flex justify-between items-center px-4 py-6 sm:px-6 md:justify-start md:space-x-20 md:max-w-screen-2xl mr-auto ml-auto font-medium font-poppins">
         <div class="lg:w-0 lg:flex-1 space-x-36">
-            <img class="md:max-h-16 max-h-10"
-                src="https://cdn.shopify.com/s/files/1/0533/5724/8681/files/Teeccino_logo.png?v=1618555733"
-                alt="Workflow" />
+            <img class="md:max-h-16 max-h-10" src="./assets/images/Teeccino_logo.png" alt="Workflow" />
         </div>
         <div class="-mr-2 -my-2 md:hidden">
             <button @click="mobileMenuOpen = true" type="button"
