--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,16 +1,17 @@
 <!--Hero-->
 <div
-    class="mx-auto flex flex-col md:flex-row items-center py-18 md:py-36 text-teeccino-brown font-poppins bg-hero-1 bg-cover w-full">
+    class="hero_bg_mobile lg:hero_bg mx-auto flex flex-col items-center text-teeccino-brown font-poppins w-full h-auto">
     <!--Left Col-->
     <div
-        class="container flex flex-col w-full justify-center items-start pt-12 pb-24 mx-auto sm:text-center md:text-left">
-        <div class="w-full md:w-1/2 text-center md:text-left ">
-            <h1 class="font-medium text-6xl my-4 leading-loose">Rich. Bold. Satisfying.</h1>
-            <p class="leading-normal mb-4 text-3xl max-w-full md:max-w-xs font-roboto font-light">Put maximum wellness
+        class="container flex flex-col w-full justify-center items-start pl-2 pr-2 pt-10 pb-10 md:pt-20 md:pb-20 lg:pt-40 lg:pb-40 xl:pt-52 xl:pb-52 2xl:pb-60 2xl:pt-60 lg:pl-8 lg:pr-0 mx-auto sm:text-center md:text-left">
+        <div class="w-full lg:w-1/2 text-center lg:text-left">
+            <h1 class="font-medium text-6xl leading-tight">Rich. Bold. Satisfying.</h1>
+            <p class="leading-normal mb-10 mt-8 text-3xl max-w-full lg:max-w-xs font-roboto font-light">Put maximum
+                wellness
                 in your cup!
             </p>
             <button
-                class="bg-transparent hover:bg-gray-900 text-gray-900 hover:text-white rounded shadow hover:shadow-lg py-2 px-4 border border-gray-900 hover:border-transparent">Super
+                class="bg-transparent text-teeccino-brown hover:bg-teeccino-brown hover:text-white rounded shadow hover:shadow-lg py-2 px-4 border border-teeccino-brown hover:border-transparent">Super
                 Button</button>
         </div>
     </div>
