Add icons, homepage blocks

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -96,11 +96,7 @@
         <div class="rounded-lg shadow-lg">
             <div class="rounded-lg shadow-xs bg-white divide-y-2 divide-gray-50">
                 <div class="pt-5 pb-6 px-5 space-y-6">
-                    <div class="flex items-center justify-between">
-                        <div>
-                            <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-on-white.svg"
-                                alt="Workflow" />
-                        </div>
+                    <div class="flex items-center justify-end">
                         <div class="-mr-2">
                             <button @click="mobileMenuOpen = false" type="button"
                                 class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out">
