--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -7,9 +7,7 @@
         <div class="w-full lg:w-1/2 text-center lg:text-left">
             <h1 class="font-medium text-6xl leading-tight">Rich. Bold. Satisfying.</h1>
             <p class="leading-normal mb-10 mt-8 text-3xl max-w-full lg:max-w-xs font-roboto font-light">Put maximum
-                wellness
-                in your cup!
-            </p>
+                wellness in your cup!</p>
             <button
                 class="bg-transparent text-teeccino-brown hover:bg-teeccino-brown hover:text-white rounded shadow hover:shadow-lg py-2 px-4 border border-teeccino-brown hover:border-transparent">Super
                 Button</button>
