--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -3,3 +3,29 @@ layout: default
 ---
 
 {% include hero.html %}
+
+{% include sections/icons.html %}
+
+<div class="flex flex-wrap">
+    <div class="h-96 lg:h-auto flex w-full md:w-2/3 relative"
+        style="background-image:linear-gradient(to top,rgba(0,0,0,.6) 0,rgba(18,18,18,.6) 7%,rgba(153,153,153,0) 60%,rgba(255,255,255,0) 100%);">
+        <img class="w-auto h-auto object-cover relative" style="z-index:-1;"
+            src="https://cdn.shopify.com/s/files/1/0533/5724/8681/files/home-herbal-coffees-mobile.jpg?v=1611130335"
+            srcset="https://cdn.shopify.com/s/files/1/0533/5724/8681/files/home-herbal-coffees-mobile.jpg?v=1611130335 320w, https://cdn.shopify.com/s/files/1/0533/5724/8681/files/home-herbal-coffees.jpg?v=1611130348 768w">
+        <div class="absolute top-1/2 text-center md:text-left md:left-20 w-full">
+            <h2 class="text-white text-lg lg:text-6xl font-roboto font-medium">
+                Brew
+                Like
+                Coffee</h2>
+            <p class="mt-2 text-white text-base lg:text-2xl font-roboto">America's #1 Coffee Alternative</p>
+        </div>
+    </div>
+    <div class="flex w-full md:w-1/3 z-10 bg-gif-red justify-center items-center">
+        <video class="w-11/12 h-auto" autoplay="" loop="" muted="" playsinline="">
+            <source src="https://cdn.shopify.com/s/files/1/0533/5724/8681/files/like-coffee.webm?v=1619852758"
+                type="video/webm">
+            <source src="https://cdn.shopify.com/s/files/1/0533/5724/8681/files/like-coffee-mp4.mp4?v=1620405881"
+                type="video/mp4">
+        </video>
+    </div>
+</div>
